# http-spray

./: README.md  pyproject.toml
httpspray/: main.py
httpspray/module/: base.py  basic.py  msauth.py  ntlm.py  oauth.py
wordlists/: desktop-user-agents.csv  m365-private-clients.csv  m365-public-clients.csv  m365-resources.csv  mobile-user-agents.csv
