[tool.poetry]
name = "http-spray"
version = "0.0.3"
description = ""
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "httpspray"}]

[tool.poetry.scripts]
http-spray = "httpspray.main:main"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
requests-ntlm = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
